Bug 164233 - Mousewheel does not change numeric field values, no matter the selected option
Summary: Mousewheel does not change numeric field values, no matter the selected option
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.3.2 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL: https://youtu.be/1_wYqWs9Sls
Whiteboard: target:25.8.0 target:25.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2024-12-07 18:18 UTC by nnfernando
Modified: 2024-12-23 09:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nnfernando 2024-12-07 18:18:45 UTC
Description:
When using the mouse wheel to adjust numeric fields, the value does not change as expected. This issue occurs consistently and makes it necessary to manually type the desired value, or to use arrowkeys, instead of using the mouse for quick adjustments.

Steps to Reproduce:
1.Open Libreoffice Writer
2.Go to Forms (Formulário in PT-BR. Sorry, i have no ideia if the English name is correct) › Activate Edition Mode (Modo de Edição) › More Fields (Mais Campos) › Numeric Field (Campo Numérico) › Drag to create a field
3.Duble click the created field
4.Go to "Mousewheel Scroll" ("Rolagem com a roda do mouse" in PT-BR) and select either "Always" or "When recive focus" ("Ao receber foco" in PT-BR).
5.Deactivate the Edit Mode
6.Click the created field and try to alter its value by scrolling 

Actual Results:
No change happens in the numeric value. 

Expected Results:
If "Always" is selected, the scrolling the mouse wheel should alter the numeber.
If "When recive focus" is selected, clicking the field and then scrolling should alter its value.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Sorry, i use the PT-BR version, i really have no idea if the ENG names are correct. Also, this started to happen probabbly around month 6 (i do not remember, sorry again). Hope this helps.  

--
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: pt-BR (pt_BR); UI: pt-BR
Calc: threaded
Comment 1 Robert Großkopf 2024-12-07 18:48:07 UTC
Click Form → Design mode
Open Control properties of the numeric field.
Set Spin Button → 'Yes'
There will appear buttons on the right of you numeric field.
Now mouse wheel will change the value by the vale you have set in increment/decrement value of the properties of numeric field.

Works on 
Version: 24.8.4.1 (X86_64) / LibreOffice Community
Build ID: 1be9007f5d86a3741c366527d13e2970cbeef057
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

You could set your LO to English language. Then you will see the correct English names for the fields. Every installation will allow this, because it is the default when installing LibreOffice without any language pack.
Comment 2 raal 2024-12-08 08:02:44 UTC
WFM with steps in comment 1
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ec4415d2a78b1c0fb5eab5baea88508d6b9db43b
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: cs-CZ
Calc: threaded

nnfernando, please retest.
Comment 3 nnfernando 2024-12-20 20:58:06 UTC
Sorry I didn't reply sooner.
Well, yeah, I tested the "Set Spin Button" and it works now.
But, back then, this option didn't need to be checked.
For my use case, it is better to have only the number, no arrows.
Worked fine, until it stopped after some update.
Well, thanks for your attention anyways.
Comment 4 nnfernando 2024-12-20 21:00:23 UTC
I probably won't be paying attention to this post, so feel free to close it or something.
But if my preference is worth anything, mouse scrolling should work as before, with or without the "Set Spin Button → Yes".
Have a nice day, anyway!<3
Comment 5 Robert Großkopf 2024-12-20 21:18:40 UTC
Have tested this with older versions. Changing values in the numeric field without setting Spin Button works up to LO
Version: 24.2.5.2 (X86_64) / LibreOffice Community
Build ID: bffef4ea93e59bebbeaf7f431bb02b1a39ee8a59
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

Fails with LO 24.8.3.2

So it's a regression.
Comment 6 raal 2024-12-20 22:56:34 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
Thanks
 3e4e50b9c040654710c0b2ca7451ccccef87edea is the first bad commit
commit 3e4e50b9c040654710c0b2ca7451ccccef87edea
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue May 14 07:27:17 2024 +0200

    source 869b88488ac443cc64943254064da20b0f361c56

167604: tdf#160824 vcl: Require mouse over spinfield to mouse-wheel through values | https://gerrit.libreoffice.org/c/core/+/167604
Comment 7 Michael Weghorn 2024-12-21 18:28:29 UTC
Thanks for the bibisect.

Pending fix:
https://gerrit.libreoffice.org/c/core/+/179085
Comment 8 Commit Notification 2024-12-21 19:49:40 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6eb53d3ecc839d5988a581132c81bfdf9ee2fa69

tdf#164233 vcl: Fix and simplify spin field mouse over check

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Weghorn 2024-12-21 19:51:38 UTC
Fixed in master. Backports for 25.2 and 24.8 pending in Gerrit.
Comment 10 Commit Notification 2024-12-23 09:15:38 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/34701f310e5e205450eb8aa617f0d2e8cb679dad

tdf#164233 vcl: Fix and simplify spin field mouse over check

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-12-23 09:15:41 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d6e2acd584bb7c289a6dffe4b1e58ed2546b6c8a

tdf#164233 vcl: Fix and simplify spin field mouse over check

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.